--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -49,7 +49,7 @@ fieldset {
 .form--login {
     background-size: cover;
     background-position-x: center;
-    background-image: url('./logo.png');
+    background-image: url('');
     z-index: 1;
     min-height: 25rem;
     min-width: 45rem;
