--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 body, button, input, select, textarea {
-    color: #404040;
+    color: rebeccapurple;
     font-family: "Comfortaa", Arial, sans-serif;
     font-size: 1rem;
     line-height: 1.5;
