--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -49,7 +49,7 @@ fieldset {
 .form--login {
     background-size: cover;
     background-position-x: center;
-    /* background-image: url(''); */
+    background-image: url('https://www.usnews.com/dims4/USNEWS/2188b99/2147483647/thumbnail/970x647/quality/85/?url=http%3A%2F%2Fmedia.beam.usnews.com%2F4f%2Fd8%2F448764aa42d39279b6dced177dfc%2Fseanpavonephoto.jpg');
     z-index: 1;
     min-height: 25rem;
     min-width: 45rem;
