--- a/src/components/place/place.css
+++ b/src/components/place/place.css
@@ -1,4 +1,4 @@
-.river_info {
+.place {
     flex-basis: 25%;
     display: flex;
     margin: 1rem;
@@ -18,28 +18,20 @@
     box-shadow: 0px 0px 8px 1px rgba(91, 99, 102, 0.098); 
     
 }
-.river_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    flex-shrink: initial;
-    overflow: hidden;
-    border-radius: 7px 7px 0 0;
-}
 
-.river_title {
+.place_address {
     padding-top: .3rem;
     width: 200%;
     font-size: 20px;
 }
 
 
-.river_animals {
+.place_wildlife {
     padding: 1rem 1rem 1rem 1rem;
     display: flex;
     flex-wrap: wrap;
 }
-.river_fish {
+.place_about {
     padding: 1rem 1rem 1rem 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -49,7 +41,7 @@
     display: flex;
     flex-wrap: wrap;
 }
-.river_visitors {
+.place_visitors {
     padding: 1rem 1rem 1rem 1rem;
     display: flex;
     flex-wrap: wrap;
