--- a/src/components/trip/trip.css
+++ b/src/components/trip/trip.css
@@ -1,4 +1,4 @@
-.trip_list {
+.trip_info {
     flex-basis: 25%;
     display: flex;
     margin: 1rem;
@@ -17,6 +17,26 @@
     color:white;
     box-shadow: 0px 0px 8px 1px rgba(91, 99, 102, 0.098); 
     
+}
+
+.trip_header {
+    
+    text-align: center;
+    
+}
+.create_container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+.trip_list {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 3em;
+    justify-content: space-evenly;
 }
 
 .trip_river {
