--- a/src/components/place/place.css
+++ b/src/components/place/place.css
@@ -7,7 +7,7 @@
     justify-content:space-around;
     padding: 3em;
     border: double black;
-    background-color: rgb(32,37,41);
+    background-color: aquamarine;
     font-style:normal;
     width: 450px;
     min-width: 20rem;
